[gd_scene load_steps=9 format=2]

[ext_resource path="res://EuBraBo/scrips/tempo.gd" type="Script" id=1]
[ext_resource path="res://EuBraBo/assets/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://EuBraBo/assets/HUD/TimeHud/DailyClock.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.882353, 0.615686, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "dia-noite"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.937255, 0.878431, 0.709804, 1 ), Color( 0.862745, 0.827451, 0.717647, 1 ), Color( 0.788235, 0.752941, 0.647059, 1 ), Color( 0.709804, 0.67451, 0.560784, 1 ), Color( 0.352941, 0.407843, 0.509804, 1 ), Color( 0.282353, 0.286275, 0.482353, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "noite-dia"
length = 1.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.7, 0.9, 1.1, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.588235, 0.580392, 0.556863, 1 ), Color( 0.588235, 0.580392, 0.556863, 1 ), Color( 0.658824, 0.635294, 0.564706, 1 ), Color( 0.788235, 0.737255, 0.584314, 1 ), Color( 0.87451, 0.784314, 0.513726, 1 ), Color( 0.937255, 0.847059, 0.580392, 1 ), Color( 0.937255, 0.847059, 0.580392, 1 ), Color( 0.937255, 0.847059, 0.580392, 1 ), Color( 0.972549, 0.882353, 0.615686, 1 ) ]
}

[sub_resource type="Theme" id=5]
Label/colors/font_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="tempo" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasTempo" type="CanvasModulate" parent="."]
color = Color( 0.937255, 0.878431, 0.709804, 1 )

[node name="AnimDiaNoite" type="AnimationPlayer" parent="."]
root_node = NodePath("../CanvasTempo")
autoplay = "RESET"
anims/RESET = SubResource( 1 )
anims/dia-noite = SubResource( 2 )
anims/noite-dia = SubResource( 3 )

[node name="dia" type="Timer" parent="."]
wait_time = 90.0
autostart = true

[node name="noite" type="Timer" parent="."]
wait_time = 90.0
autostart = true

[node name="hubDeDias" type="CanvasLayer" parent="."]
visible = false

[node name="numeroDias" type="Label" parent="hubDeDias"]
margin_left = 368.0
margin_top = 2.0
margin_right = 403.0
margin_bottom = 18.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="DailyClock" type="Sprite" parent="hubDeDias"]
position = Vector2( 372, 26 )
texture = ExtResource( 3 )

[connection signal="timeout" from="dia" to="." method="_on_dia_timeout"]
[connection signal="timeout" from="noite" to="." method="_on_noite_timeout"]
